# g2o

./: .clang-format  .clang-tidy  .codacy.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README  README.md  README_IF_IT_WAS_WORKING_AND_IT_DOES_NOT.txt  appveyor.yml  codecov.yml  config.h.in  pyproject.toml  pytest.ini  todo.md  todo.txt
g2o/: .gitignore  CMakeLists.txt  config.h  what_is_in_these_directories.txt
g2o/apps/: CMakeLists.txt
g2o/autodiff/: CMakeLists.txt  array_selector.h  autodiff.h  disable_warnings.h  eigen.h  fixed_array.h  integer_sequence_algorithm.h  jet.h  memory.h  parameter_dims.h  reenable_warnings.h  types.h  variadic_evaluate.h
g2o/benchmarks/: CMakeLists.txt  jacobian_timing_tests.cpp  jacobian_timing_tests2.cpp
g2o/core/: CMakeLists.txt  abstract_graph.cpp  abstract_graph.h  auto_differentiation.h  base_binary_edge.h  base_binary_edge.hpp  base_constant_edge.h  base_constant_edge.hpp  base_dynamic_vertex.h  base_edge.h  base_fixed_sized_edge.cpp  base_fixed_sized_edge.h  base_fixed_sized_edge.hpp  base_multi_edge.h  base_multi_edge.hpp  base_unary_edge.h  base_unary_edge.hpp  base_variable_sized_edge.cpp  base_variable_sized_edge.h  base_variable_sized_edge.hpp  base_vertex.cpp  base_vertex.h  base_vertex.hpp  batch_stats.cpp  batch_stats.h  block_solver.cpp  block_solver.h  block_solver.hpp  cache.cpp  cache.h  creators.h  dynamic_aligned_buffer.hpp  eigen_types.h  estimate_propagator.cpp  estimate_propagator.h  factory.cpp  factory.h  g2o_core_api.h  hyper_dijkstra.cpp  hyper_dijkstra.h  (+61 more)
g2o/custom/: binary.h  extrinsics.h  unary.h
g2o/examples/: CMakeLists.txt
g2o/proto/: graph.proto
g2o/simulator/: CMakeLists.txt  g2o_simulator_api.h  pointsensorparameters.cpp  pointsensorparameters.h  sensor_line3d.cpp  sensor_line3d.h  sensor_odometry2d.cpp  sensor_pointxy.cpp  sensor_pointxy_bearing.cpp  sensor_pointxy_bearing.h  sensor_pointxy_offset.cpp  sensor_pointxy_offset.h  sensor_pointxyz.cpp  sensor_pointxyz.h  sensor_pointxyz_depth.cpp  sensor_pointxyz_depth.h  sensor_pointxyz_disparity.cpp  sensor_pointxyz_disparity.h  sensor_pose2d.cpp  sensor_pose3d.cpp  sensor_pose3d_offset.cpp  sensor_pose3d_offset.h  sensor_se2_prior.cpp  sensor_se2_prior.h  sensor_se3_prior.cpp  sensor_se3_prior.h  sensor_segment2d.cpp  sensor_segment2d.h  sensor_segment2d_line.cpp  sensor_segment2d_line.h  sensor_segment2d_pointline.cpp  sensor_segment2d_pointline.h  simulator.cpp  simulator.h  simulator2d_base.cpp  simulator2d_base.h  simulator3d_base.cpp  simulator3d_base.h  simutils.cpp  simutils.h
g2o/solvers/: CMakeLists.txt
g2o/stuff/: CMakeLists.txt  color_macros.h  command_args.cpp  command_args.h  fast_output.h  filesys_tools.cpp  filesys_tools.h  g2o_stuff_api.h  hash_combine.h  logger.cpp  logger.h  logger_format.h  macros.h  misc.h  opengl_api.h  opengl_interface.cpp  opengl_interface.h  opengl_primitives.cpp  opengl_primitives.h  opengl_wrapper.h  os_specific.c  os_specific.h  property.cpp  property.h  sampler.cpp  sampler.h  scoped_pointer.h  sparse_helper.cpp  sparse_helper.h  string_tools.cpp  string_tools.h  tictoc.cpp  tictoc.h  timeutil.cpp  timeutil.h  tuple_tools.h  unscented.h
g2o/types/: CMakeLists.txt
python/: CMakeLists.txt  README.md  g2opy.cpp  g2opy.h
python/core/: base_binary_edge.h  base_edge.cpp  base_edge.h  base_fixed_sized_edge.h  base_multi_edge.cpp  base_multi_edge.h  base_unary_edge.h  base_vertex.cpp  base_vertex.h  batch_stats.cpp  batch_stats.h  block_solver.cpp  block_solver.h  eigen_types.cpp  eigen_types.h  hyper_dijkstra.h  hyper_graph.h  hyper_graph_action.h  linear_solver.h  optimizable_graph.h  optimization_algorithm.h  parameter.h  parameter_container.h  py_base_binary_edge.h  py_base_edge.cpp  py_base_edge.h  py_base_fixed_sized_edge.h  py_base_multi_edge.cpp  py_base_multi_edge.h  py_base_unary_edge.h  py_base_variable_sized_edge.cpp  py_base_variable_sized_edge.h  py_base_vertex.cpp  py_base_vertex.h  py_batch_stats.cpp  py_batch_stats.h  py_block_solver.cpp  py_block_solver.h  py_core.cpp  py_core.h  (+32 more)
python/detail/: register_edge.h  registry.h
python/examples/: ba_anchored_inverse_depth_demo.py  ba_demo.py  derived_class.py  gicp_demo.py  gicp_sba_demo.py  notebook_simulator.ipynb  notebook_slam2d.ipynb  sba_demo.py  sba_demo2.py  simple_optimize.py  simulator.py  type_in_python.py  validate_graph_json.py
python/g2opy/: __init__.py
python/pybind11/: CMakeLists.txt.in
python/simulator/: py_simulator.cpp  py_simulator.h
python/tests/: __init__.py  conftest.py  test_core.py  test_custom_types.py  test_io.py  test_optimization.py  test_simulator.py  test_types.py
python/trampoline/: py_edge_trampoline.h
python/types/: py_types.h  types.h
unit_test/: CMakeLists.txt  gtest.cmake
unit_test/data/: CMakeLists.txt  data_queue_tests.cpp  io_data.cpp
unit_test/general/: CMakeLists.txt  allocate_optimizer.cpp  allocate_optimizer.h  auto_diff.cpp  base_constant_edge.cpp  base_fixed_sized_edge.cpp  batch_statistics.cpp  cache_tests.cpp  clear_and_redo.cpp  graph_io.cpp  graph_io_dynamic.cpp  graph_operations.cpp  optimization_basics.cpp  partially_initialize.cpp  robust_kernel_tests.cpp  sparse_block_matrix.cpp  type_traits_tests.cpp
unit_test/icp/: CMakeLists.txt  icp_rotation.cpp
unit_test/sba/: CMakeLists.txt  io_sba.cpp  io_six_dof_expmap.cpp  sba_basic_tests.cpp  sba_io.cpp
unit_test/sclam2d/: CMakeLists.txt  io_sclam2d.cpp  odom_convert_sclam2d.cpp  sensor_offset.cpp
unit_test/sim3/: CMakeLists.txt  allocate_sim3.cpp  io_sim3.cpp  jacobians_sim3.cpp
unit_test/simulator/: CMakeLists.txt  simulator2D_tests.cpp  simulator3D_tests.cpp
unit_test/slam2d/: CMakeLists.txt  io_slam2d.cpp  jacobians_slam2d.cpp  mappings_se2.cpp  odom_convert_sclam2d.cpp  optimization_slam2d_schur.cpp  slam2d_basic_tests.cpp  slam2d_io.cpp  solve_direct_slam2d.cpp
unit_test/slam2d_addons/: CMakeLists.txt  io_slam2d_addons.cpp
unit_test/slam3d/: CMakeLists.txt  io_slam3d.cpp  jacobians_slam3d.cpp  mappings_slam3d.cpp  optimization_slam3d.cpp  (+3 more)
(+809 files in other folders)
